# securon

./: .gitignore  ANIMATED_HOME_PAGE_COMPLETE.md  CLEAN_CLI_OUTPUT.md  CLI_REFERENCE.md  CLI_SETUP_COMPLETE.md  ENHANCED_DASHBOARD_COMPLETE.md  FINAL_INTEGRATION_COMPLETE.md  FRONTEND_BACKEND_CONNECTION_FIXED.md  INTEGRATION_TEST_COMPLETE.md  NAVBAR_UPDATES_COMPLETE.md  NEW_HOME_PAGE_COMPLETE.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  install.bat  install.sh  package-lock.json  test_anomaly_logs.json  test_cloudtrail_logs.json  test_terraform_security.tf  test_vpc_flow_logs.json
backend/: CLI_README.md  install.py  pyproject.toml  requirements.txt  securon  securon_cli.py
backend/.hypothesis/examples/18bca37f98d91d8a/: 5dd3d7f948775559
backend/.hypothesis/examples/4a32d755803d4b46/: 529c09e7979ae3cd  76a595646287117d
backend/config/: platform.json
backend/data/rules/: comprehensive_rules.json  conflicts.json  metrics.json  rules.json  versions.json
backend/examples/: iac_scanner_demo.py  log_processing_demo.py  ml_engine_demo.py  rule_engine_demo.py
backend/src/securon/: __init__.py  main.py
backend/src/securon/cli/: main.py  (+2 more)
backend/src/securon_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/tests/: test_data_persistence.py  test_iac_scanner.py  test_log_processor.py  test_ml_engine.py  test_ml_integration.py  test_platform_integration.py  test_rule_engine.py  test_rule_engine_comprehensive.py
backend/tests/test_interfaces/: test_core_types.py
backend/tests/test_utils/: __init__.py  generators.py
(+95 files in other folders)
