[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securon-platform"
version = "1.0.0"
description = "Lightweight cloud security platform with IaC scanning and ML-based runtime analysis"
authors = [{name = "Securon Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "hypothesis>=6.92.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
securon = "securon.cli.main:cli_main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]